[package]
name = "egui_template"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emilernerfeldt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.11.0" # Gives us egui, epi and web+native backends
serde = "1.0.126"
surf = "2.2.0"
async-std = {version = "1.9.0", features = ["attributes"]}
serde_json = "1.0.64"
websocket = "0.26.2"
native-tls = "0.2.7"

[features]
default = []
http = ["eframe/http"] # Enable if you want to do http requests

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
